[gd_scene load_steps=8 format=3 uid="uid://cvqiengdoxpok"]

[ext_resource type="Script" path="res://hotel/transition/day_end.gd" id="1_n3rkm"]
[ext_resource type="Theme" uid="uid://cljv3o1v8gskw" path="res://hotel/theme.tres" id="2_ljj0b"]
[ext_resource type="Texture2D" uid="uid://bn3xuxh4v804g" path="res://ui/end_pattern.png" id="2_wrspq"]
[ext_resource type="Texture2D" uid="uid://ctu2rlnbxrc01" path="res://ui/star_outline.png" id="3_alov2"]
[ext_resource type="Texture2D" uid="uid://m8lg20gijl6m" path="res://ui/star.png" id="4_77e1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1c8xc"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7os4m"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="day_end" type="CanvasLayer"]
script = ExtResource("1_n3rkm")

[node name="container" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ljj0b")
texture = ExtResource("2_wrspq")
expand_mode = 1
stretch_mode = 1

[node name="vbox" type="VBoxContainer" parent="container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -81.0
offset_right = 41.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="title" type="RichTextLabel" parent="container/vbox"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[center][wave]Day 1[/wave][center]"
fit_content = true

[node name="grid" type="GridContainer" parent="container/vbox"]
layout_mode = 2
columns = 2

[node name="clients_label" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Number of clients"

[node name="clients_value" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 2

[node name="happiness_label" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Total happiness"

[node name="happiness_value" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 2

[node name="money_label" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Money"

[node name="money_value" type="Label" parent="container/vbox/grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0c"
horizontal_alignment = 2

[node name="level" type="Panel" parent="container/vbox"]
custom_minimum_size = Vector2(184, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1c8xc")

[node name="vbox" type="VBoxContainer" parent="container/vbox/level"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="hbox" type="HBoxContainer" parent="container/vbox/level/vbox"]
layout_mode = 2
alignment = 1

[node name="0" type="TextureProgressBar" parent="container/vbox/level/vbox/hbox"]
layout_mode = 2
allow_lesser = true
texture_under = ExtResource("3_alov2")
texture_progress = ExtResource("4_77e1h")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="1" type="TextureProgressBar" parent="container/vbox/level/vbox/hbox"]
layout_mode = 2
allow_lesser = true
texture_under = ExtResource("3_alov2")
texture_progress = ExtResource("4_77e1h")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="2" type="TextureProgressBar" parent="container/vbox/level/vbox/hbox"]
layout_mode = 2
allow_lesser = true
texture_under = ExtResource("3_alov2")
texture_progress = ExtResource("4_77e1h")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="3" type="TextureProgressBar" parent="container/vbox/level/vbox/hbox"]
layout_mode = 2
allow_lesser = true
texture_under = ExtResource("3_alov2")
texture_progress = ExtResource("4_77e1h")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="4" type="TextureProgressBar" parent="container/vbox/level/vbox/hbox"]
layout_mode = 2
allow_lesser = true
texture_under = ExtResource("3_alov2")
texture_progress = ExtResource("4_77e1h")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="progress" type="Label" parent="container/vbox/level/vbox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7os4m")
text = "next level in 20"
horizontal_alignment = 1

[node name="continue" type="Button" parent="container/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Next day"

[connection signal="pressed" from="container/vbox/continue" to="." method="_on_continue_pressed"]
